# swe-compliance

./: .gitignore  Cargo.toml  deny.toml
doc-engine/: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  rules.toml
doc-engine/.github/: PULL_REQUEST_TEMPLATE.md
doc-engine/.github/ISSUE_TEMPLATE/: bug_report.md
doc-engine/ai/: Cargo.toml
doc-engine/ai/src/: lib.rs
doc-engine/ai/src/api/: mod.rs  service.rs  types.rs
doc-engine/ai/src/spi/: config.rs  mod.rs
doc-engine/cli/: Cargo.toml
doc-engine/cli/src/: main.rs
doc-engine/cli/tests/: cli_e2e.rs  config_filtering.rs  error_handling.rs  report_format.rs  scaffold_e2e_test.rs  scaffold_fixtures.rs  scaffold_int_test.rs  scan_api.rs
doc-engine/command-generator/: Cargo.toml
doc-engine/command-generator/src/: lib.rs
doc-engine/command-generator/src/api/: mod.rs  service.rs  types.rs
doc-engine/compliance-audit/: Cargo.toml
doc-engine/compliance-audit/src/: lib.rs
doc-engine/compliance-audit/src/api/: mod.rs  service.rs  types.rs
doc-engine/compliance-audit/src/core/: mod.rs
doc-engine/compliance-audit/src/spi/: config.rs  mod.rs
doc-engine/compliance-audit/ui/: scaffold-report.json  srs.md
doc-engine/compliance-chat/: Cargo.toml
doc-engine/compliance-chat/src/: lib.rs
doc-engine/compliance-chat/src/api/: mod.rs  service.rs  types.rs
doc-engine/compliance-chat/src/spi/: config.rs  mod.rs
doc-engine/config/: test_commands.toml
doc-engine/docs/: README.md  glossary.md
doc-engine/docs/1-requirements/: brd.spec  brd.spec.yaml  requirements.md  srs.md
doc-engine/docs/1-requirements/architecture/: architecture.spec  architecture.spec.yaml
doc-engine/docs/1-requirements/check_execution/: check_execution.spec  check_execution.spec.yaml
doc-engine/docs/1-requirements/cli_interface/: cli_interface.spec  cli_interface.spec.yaml
doc-engine/docs/1-requirements/cross_referencing/: cross_referencing.spec  cross_referencing.spec.yaml
doc-engine/docs/1-requirements/extensibility/: extensibility.spec  extensibility.spec.yaml
doc-engine/docs/1-requirements/file_discovery/: file_discovery.spec  file_discovery.spec.yaml
doc-engine/docs/1-requirements/library_api/: library_api.spec  library_api.spec.yaml
doc-engine/docs/1-requirements/markdown_generation/: markdown_generation.spec  markdown_generation.spec.yaml
doc-engine/docs/1-requirements/performance/: performance.spec  performance.spec.yaml
doc-engine/docs/1-requirements/planned_check_behavioral_requirements/: planned_check_behavioral_requirements.spec  planned_check_behavioral_requirements.spec.yaml
doc-engine/docs/1-requirements/portability/: portability.spec  portability.spec.yaml
doc-engine/docs/1-requirements/reliability/: reliability.spec  reliability.spec.yaml
doc-engine/docs/1-requirements/reporting/: reporting.spec  reporting.spec.yaml
doc-engine/docs/1-requirements/rule_loading/: rule_loading.spec  rule_loading.spec.yaml
doc-engine/docs/1-requirements/scan_pipeline_integration/: scan_pipeline_integration.spec  scan_pipeline_integration.spec.yaml
doc-engine/docs/1-requirements/spec_file_parsing/: spec_file_parsing.spec  spec_file_parsing.spec.yaml
doc-engine/docs/1-requirements/spec_schema_validation/: spec_schema_validation.spec  spec_schema_validation.spec.yaml
doc-engine/docs/1-requirements/spec_subcommand/: spec_subcommand.spec  spec_subcommand.spec.yaml
doc-engine/docs/1-requirements/srs_scaffold/: srs_scaffold.spec  srs_scaffold.spec.yaml
doc-engine/docs/2-planning/: backlog.md  communication_plan.md  documentation_audit_report_v0.1.0.json  estimation.md  implementation_plan.md  quality_plan.md  resource_plan.md  risk_register.md  schedule.md
doc-engine/docs/3-design/: architecture.md  design_review.md
doc-engine/docs/3-design/adr/: 001-single-crate-sea.md  README.md
doc-engine/docs/4-development/: README.md  developer_guide.md
doc-engine/docs/5-testing/: test_plan.md  testing_strategy.md
doc-engine/docs/6-deployment/: doc_engine_evaluation_report.md  production_readiness.md
doc-engine/docs/templates/: check_template.md
doc-engine/scaffold/: Cargo.toml
doc-engine/scan/: Cargo.toml
doc-engine/scan/config/: rules.toml
doc-engine/src/: lib.rs  main.rs
doc-engine/src/api/: traits.rs  types.rs
doc-engine/src/core/: declarative.rs  engine.rs  reporter.rs  rules.rs  scanner.rs
doc-engine/src/main/: lib.rs  main.rs
doc-engine/src/saf/: mod.rs
doc-engine/src/spi/: mod.rs  traits.rs  types.rs
doc-engine/src/test/: cli_e2e.rs  config_filtering.rs  error_handling.rs  report_format.rs  scaffold.rs  scaffold_fixtures.rs  scaffold_int_test.rs  scan_api.rs
doc-engine/tests/: cli_e2e.rs  config_filtering.rs  error_handling.rs  scan_api.rs
doc-engine/tests/common/: mod.rs
struct-engine/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  rules-rustboot.toml
struct-engine/config/: rules.toml
struct-engine/docs/: README.md  backlog.md  glossary.md  implementation_plan.md  srs.md
struct-engine/docs/3-design/: architecture.md
struct-engine/docs/4-development/: developer_guide.md
struct-engine/main/src/: lib.rs  main.rs
struct-engine/src/: lib.rs
struct-engine/src/api/: traits.rs  types.rs
struct-engine/src/core/: cargo_manifest.rs  declarative.rs  engine.rs  reporter.rs  rules.rs  scanner.rs
struct-engine/src/saf/: mod.rs
struct-engine/src/spi/: types.rs
struct-engine/tests/: cli_e2e.rs  scan_api.rs  struct_engine_e2e_test.rs  struct_engine_int_test.rs
struct-engine/tests/common/: mod.rs
ui/app/: Cargo.toml  rsc.toml  swe_compliance_frontend_routes.yaml
ui/app/src/: lib.rs  main.rs  main.rsx  test_common.rs
ui/server/: Cargo.toml
ui/server/src/: auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  ws.rs
ui/server/tests/: ai_test.rs  editor_test.rs  health_test.rs  projects_test.rs  reports_test.rs  scaffold_test.rs  scans_test.rs  specs_test.rs  templates_test.rs  violations_test.rs
(+721 files in other folders)
