[package]
name = "doc-engine"
version = "0.1.0"
edition = "2021"
description = "Documentation compliance engine enforcing template-engine framework standards"
license = "MIT"

[lib]
name = "doc_engine"
path = "src/lib.rs"

[[bin]]
name = "doc-engine"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
regex = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
