[package]
name = "doc-engine"
version = "0.1.0"
edition = "2021"
description = "Documentation compliance engine enforcing template-engine framework standards"
license = "MIT"
repository = "https://github.com/sweengineeringlabs/swe-compliance"
authors = ["SWE Engineering Labs"]
keywords = ["documentation", "compliance", "audit", "cli", "linter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "doc_engine"
path = "src/main/lib.rs"

[[bin]]
name = "doc-engine"
path = "src/main/main.rs"

[[test]]
name = "scan_api"
path = "src/test/scan_api.rs"

[[test]]
name = "cli_e2e"
path = "src/test/cli_e2e.rs"

[[test]]
name = "config_filtering"
path = "src/test/config_filtering.rs"

[[test]]
name = "error_handling"
path = "src/test/error_handling.rs"

[[test]]
name = "report_format"
path = "src/test/report_format.rs"

[[test]]
name = "scaffold"
path = "src/test/scaffold.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
regex = "1"
serde_yml = "0.0.12"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
