[package]
name = "struct-engine"
version = "0.1.0"
edition = "2021"
description = "Rust package structure compliance engine auditing source layout conventions"
license = "MIT"
repository = "https://github.com/sweengineeringlabs/swe-compliance"
authors = ["SWE Engineering Labs"]
keywords = ["rust", "compliance", "audit", "cli", "linter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "struct_engine"
path = "src/lib.rs"

[[bin]]
name = "struct-engine"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
