[package]
name = "doc-engine-compliance-chat"
version = "0.1.0"
edition = "2021"
description = "Interactive chat with a compliance auditor agent"
license = "MIT"

[dependencies]
llm-provider = { version = "0.1.0", registry = "local" }
agent-controller = { version = "0.1.0", registry = "local", features = ["yaml"] }
chat-engine = { package = "chat", version = "0.1.0", registry = "local" }
tool = { version = "0.1.0", registry = "local" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
