[package]
name = "doc-engine-scan"
version = "0.1.0"
edition = "2021"

[lib]
name = "doc_engine_scan"
path = "main/src/lib.rs"

[features]
default = []
kafka = ["kafka-sink"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
walkdir = "2"
kafka-sink = { path = "../../kafka-sink", optional = true }

[dev-dependencies]
tempfile = "3"
