[package]
name = "swe-compliance-frontend"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rsc-macros = { path = "../../../rustscript/crates/rsc-macros" }
rsc-runtime-20 = { path = "../../../rustscript/crates/rsc-runtime" }
rsc-compat = { path = "../../../rustscript/crates/rsc-compat" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
rsc-e2e-test = { path = "../../../rustscript/crates/runtime/test/e2e" }
rsc-test-macros = { path = "../../../rustscript/crates/tools/test-macros" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
