[package]
name = "swe-compliance-server"
version = "0.1.0"
edition = "2021"
description = "REST/WebSocket API server for the swe-compliance frontend"
license = "MIT"

[[bin]]
name = "swe-compliance-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
futures = "0.3"
tokio-stream = "0.1"

# Engine dependencies (always available — synchronous, no external deps)
doc-engine-scan = { path = "../../doc-engine/scan" }
doc-engine-scaffold = { path = "../../doc-engine/scaffold" }
struct-engine = { path = "../../struct-engine" }

# AI engine dependencies (optional — require local registry for LLM crates)
doc-engine-compliance-audit = { path = "../../doc-engine/compliance-audit", optional = true }
doc-engine-compliance-chat = { path = "../../doc-engine/compliance-chat", optional = true }
doc-engine-command-generator = { path = "../../doc-engine/command-generator", optional = true }

[features]
default = []
ai = ["doc-engine-compliance-audit", "doc-engine-compliance-chat", "doc-engine-command-generator"]
